<resources>
    <string name="app_name">Final</string>
    <string name="umbrellacorp">UMBRELLACORP</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign up!</b></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome">Welcome To</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="try_visitor_status">Try Visitor Status</string>
    <string name="photo">photo</string>
    <string name="e_mail">E-Mail</string>
    <string name="change_password">Change Password</string>
    <string name="todo">TODO</string>
    <string name="anda">AnDa</string>
    <string name="current_user">Current User</string>
</resources>
