<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="AnDA"
        android:textColor="#D6DBDF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#D3E1ED"
            android:drawableStart="@drawable/ic_action_mail"
            android:ems="10"
            android:hint="@string/sign_in_with_email"
            android:inputType="textEmailAddress"
            android:textColor="#D6DBDF"
            android:textColorHighlight="#D6DBDF"
            android:textColorHint="#D6DBDF"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:backgroundTint="#D3E1ED"
            android:drawableStart="@drawable/ic_action_passw"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#D6DBDF"
            android:textColorHighlight="#D6DBDF"
            android:textColorHint="#D6DBDF" />
        <Button
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D6DBDF"
            android:text="@string/sign_in"
            android:textColor="#223748"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#D6DBDF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#D6DBDF"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tryVisitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_visitor_status"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#D6DBDF"
            android:textSize="18sp" />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>
